--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Building tomorrow's most beautiful and sophisticated websites, mobile apps, and custom software solutions.">
-    <link rel="shortcut icon" href="https://ojs.azureedge.net/assets/favicon-635884789474396106.ico">
+    <link rel="shortcut icon" href="https://ojs-aefpbda0fna6c6gs.z01.azurefd.net/assets/favicon-635884789474396106.ico">
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
             "@type": "Organization",
             "name": "Orange Jetpack",
             "url": "https://www.orangejetpack.com/",
-            "logo": "https://ojs.azureedge.net/assets/orange-jetpack-logo-transparent-400x400-635809705893771282.png",
+            "logo": "https://ojs-aefpbda0fna6c6gs.z01.azurefd.net/assets/orange-jetpack-logo-transparent-400x400-635809705893771282.png",
             "email": "info@orangejetpack.com",
             "founder": [{
                 "@type": "Person",
                 "name": "Andy Mehalick",
-                "image": "https://andy.azureedge.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg",
+                "image": "https://andy-bhbtdzffahctcwh8.z01.azurefd.net/assets/andy-mehalick-v1-280x280-635783259977684363.jpg",
                 "url": "https://andy.mehalick.com/"
             }]
         }
@@ -54,7 +54,5 @@
         <path class="st1" d="M76.3 573.2h41.1v-8.8H85.1v-19.5h26.2v-8.7H85.1v-24.3h32.3v-8.8H76.3zM398.3 511.9c8 0 14.6 6.6 14.6 14.6h8.8c0-12.8-10.4-23.3-23.3-23.3s-23.3 10.4-23.3 23.3v23.3c0 12.8 10.4 23.3 23.3 23.3s23.3-10.4 23.3-23.3h-8.8c0 8-6.6 14.6-14.6 14.6s-14.6-6.6-14.6-14.6v-23.3c0-8 6.5-14.6 14.6-14.6zM493.3 509l-6.2-6.1-27.2 27v-26.8h-8.7v70h8.7v-26.7l27.2 26.9 6.2-6.2-29.2-29zM13.1 511.7h24.8v38.1c0 8-6.6 14.6-14.6 14.6s-14.6-6.6-14.6-14.6v-10.3H0v10.3c0 12.8 10.4 23.3 23.3 23.3s23.3-10.4 23.3-23.3V503H13l.1 8.7zM311.1 503.1l-22 70.8 8.4 2.6 7.4-23.8h25.4l7.4 23.8 8.4-2.6-22-70.8h-13zm-3.4 40.7l9.9-32h.1l9.9 32h-19.9zM248 503.1h-22v70h8.8v-28.3H248c11.6 0 20.9-9.4 20.9-20.9 0-11.5-9.4-20.8-20.9-20.8zm0 32.9h-13.2v-24.3H248c6.7 0 12.2 5.5 12.2 12.2 0 6.6-5.5 12.1-12.2 12.1zM147 511.8h20.1v61.3h8.8v-61.3h20v-8.7H147z"/>
         <path class="st1" d="M77.6 412.6c0-12.8-10.4-23.3-23.3-23.3-12.8 0-23.3 10.4-23.3 23.3V436c0 12.8 10.4 23.3 23.3 23.3 12.8 0 23.3-10.4 23.3-23.3v-23.4zm-8.8 23.5c0 8-6.6 14.6-14.6 14.6s-14.6-6.6-14.6-14.6v-23.4c0-8 6.6-14.6 14.6-14.6s14.6 6.7 14.6 14.7v23.3zM150 459.6c2.7 0 4.7-.6 4.9-.6l-2.3-8.5c-.1 0-6.4 1.6-9.2-2.8-2.8-4.5-6.8-11.9-9.6-17.2 9.4-2 16.5-10.4 16.5-20.5 0-11.6-9.4-20.8-20.9-20.8h-21.9v70h8.8v-28.3h8c2.6 4.9 8 15.2 11.8 21.2 2.6 4.2 6.8 6.7 12.1 7.1.6.4 1.2.4 1.8.4zm-33.6-37.2v-24.3h13.2c6.8 0 12.2 5.5 12.2 12.2 0 6.7-5.5 12.2-12.2 12.2h-13.2zM462.4 450.8H430v-19.5h26.3v-8.8H430v-24.3h32.4v-8.7h-41.1v70h41.1zM391.2 436.1v-13.6H364v8.8h18.3v4.9c0 8-6.6 14.6-14.6 14.6s-14.6-6.6-14.6-14.6v-23.3c0-8 6.6-14.6 14.6-14.6s14.6 6.6 14.6 14.6h8.8c0-12.8-10.4-23.3-23.3-23.3s-23.3 10.4-23.3 23.3v23.3c0 12.8 10.4 23.3 23.3 23.3 13 0 23.4-10.5 23.4-23.4zM237.3 460.2l-22-70.8h-12.9l-22 70.8 8.4 2.6 7.4-23.8h25.4l7.4 23.8 8.3-2.6zm-38.4-30l9.9-32h.1l9.9 32h-19.9zM301.2 459.4l-.1.1h13.6l-.1-70.1h-8.8l.1 60-29.3-60H263l.1 70.1h8.8l-.1-60z"/>
     </svg>
-    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-P3SM8L" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-P3SM8L');</script>
 </body>
 </html>
